# REST-gRPC-in-33-Languages

./: LEARNING_PATH.md  Makefile  README.md  docker-build-all.sh  docker-compose.yml  quick-start.sh  setup-dev-environment.sh
.github/workflows/: deploy-book.yml  test-all.yml
benchmark/: benchmark.sh
book/manuscript/: table-of-contents.md
book/manuscript/chapters/: 01-javascript.md  02-typescript.md  03-dart.md  04-go.md  05-ruby.md  06-crystal.md  07-php.md  08-python.md  09-java.md  10-rust.md  11-kotlin.md  12-swift.md  13-csharp.md  14-fsharp.md  15-cpp.md  16-scala.md  17-objective-c.md  18-c.md  19-d.md  20-perl.md  21-elixir.md  22-lua.md  23-r.md  24-haskell.md  25-clojure.md  26-zig.md  27-erlang.md  28-ocaml.md  29-nim.md  30-julia.md  31-gleam.md  32-v.md  33-io.md
book/manuscript/frontmatter/: 00-title.md  01-foreword.md  02-preface.md  03-acknowledgements.md  04-introduction.md
code/c/: README.md
code/c/grpc/: README.md
code/c/rest/client/: Makefile
code/c/rest/server/: Makefile
code/clojure/grpc/: README.md  run-client.sh  run-server.sh
code/clojure/grpc/client/: project.clj
code/clojure/grpc/server/: project.clj
code/clojure/rest/: README.md  run-client.sh  run-server.sh
code/clojure/rest/client/: project.clj
code/clojure/rest/server/: project.clj
code/cpp/grpc/client/: CMakeLists.txt
code/cpp/grpc/client/include/: task_client.h
code/cpp/grpc/client/src/: main.cpp  task_client.cpp
code/cpp/grpc/server/: CMakeLists.txt
code/cpp/rest/client/: CMakeLists.txt
code/cpp/rest/client/include/: api_client.h
code/cpp/rest/client/src/: api_client.cpp  main.cpp  models.cpp
code/cpp/rest/server/: CMakeLists.txt
code/cpp/rest/server/include/: database.h  handlers.h  models.h
code/cpp/rest/server/src/: database.cpp  handlers.cpp  main.cpp  models.cpp
code/crystal/grpc/: README.md
code/crystal/rest/client/: shard.yml
code/crystal/rest/server/: shard.yml
code/csharp/grpc/client/: Program.cs  TaskGrpcClient.csproj
code/csharp/grpc/server/: Program.cs  TaskGrpcServer.csproj
code/csharp/rest/client/: Program.cs  TaskApiClient.cs  TaskRestClient.csproj
code/csharp/rest/server/: Program.cs  TaskRestServer.csproj
code/d/: README.md
code/d/grpc/: README.md
code/d/rest/client/: dub.json
code/d/rest/server/: dub.json
code/dart/: README.md
code/dart/grpc/: build.sh
code/dart/grpc/client/: pubspec.yaml
code/dart/grpc/server/: pubspec.yaml
code/dart/rest/client/: pubspec.yaml
code/dart/rest/server/: pubspec.yaml
code/elixir/grpc/: README.md  run-client.sh  run-server.sh
code/elixir/grpc/client/: mix.exs
code/elixir/grpc/server/: mix.exs
code/elixir/rest/: README.md  run-client.sh  run-server.sh
code/elixir/rest/client/: mix.exs
code/elixir/rest/server/: mix.exs
code/erlang/grpc/: README.md  run-server.sh
code/erlang/grpc/server/: rebar.config
code/erlang/rest/: README.md  run-client.sh  run-server.sh
code/erlang/rest/client/: rebar.config
code/erlang/rest/server/: rebar.config
code/fsharp/grpc/client/: Program.fs  TaskGrpcClient.fsproj
code/fsharp/grpc/server/: Program.fs  TaskGrpcServer.fsproj  TaskService.fs
code/fsharp/rest/client/: ApiClient.fs  Models.fs  Program.fs  TaskRestClient.fsproj
code/fsharp/rest/server/: Controllers.fs  Database.fs  Models.fs  Program.fs  TaskRestServer.fsproj  appsettings.json
code/gleam/rest/: README.md  run-client.sh  run-server.sh
code/gleam/rest/client/: gleam.toml
code/gleam/rest/server/: gleam.toml
code/go/: README.md  go.mod
code/go/cmd/grpc-server/: main.go
code/go/cmd/rest-client/: main.go
code/go/cmd/rest-server/: main.go
code/go/grpc/: generate.sh
code/go/grpc/server/: server.go
code/go/internal/models/: task.go
code/go/internal/services/: task_service.go
code/go/rest/client/: client.go
code/go/rest/server/: Dockerfile  handlers.go
code/haskell/grpc/: README.md
code/haskell/grpc/client/: package.yaml
code/haskell/grpc/server/: package.yaml
code/haskell/rest/: README.md  run-client.sh  run-server.sh
code/haskell/rest/client/: task-client.cabal
code/haskell/rest/client/src/: Client.hs  Main.hs
code/haskell/rest/server/: task-server.cabal
code/haskell/rest/server/src/: API.hs  Main.hs  Repository.hs  Types.hs
code/io/rest/: README.md  run-client.sh  run-server.sh
code/io/rest/client/: client.io
code/io/rest/server/: server.io
code/java/grpc/client/: pom.xml
code/java/grpc/server/: pom.xml
code/java/rest/client/: pom.xml
code/java/rest/server/: pom.xml
code/javascript/: README.md
code/javascript/grpc/client/: client.js  package.json
code/javascript/grpc/server/: package.json  server.js
code/julia/rest/: README.md  run-client.sh  run-server.sh
code/lua/grpc/: README.md
code/lua/rest/: README.md  run-client.sh  run-server.sh
code/nim/rest/: README.md  run-client.sh  run-server.sh
code/objective-c/: .gitignore  README.md
code/objective-c/grpc/: README.md
code/ocaml/rest/: README.md  run-client.sh  run-server.sh
code/ocaml/rest/client/: dune-project
code/ocaml/rest/client/lib/: client.ml  dune  types.ml
code/ocaml/rest/server/: dune-project
code/ocaml/rest/server/lib/: dune  handlers.ml  routes.ml  store.ml  task_server.ml  types.ml
code/perl/: README.md
code/perl/grpc/: README.md
code/php/grpc/: composer.json  generate_proto.sh
code/python/grpc/: generate_proto.sh
code/r/grpc/: README.md  tasks.proto
code/r/rest/: README.md  run-client.sh  run-server.sh
code/ruby/grpc/: Gemfile  generate_proto.sh
code/rust/grpc/client/: Cargo.toml  build.rs
code/rust/grpc/client/src/: main.rs
code/rust/grpc/server/: Cargo.toml  build.rs
code/rust/grpc/server/src/: main.rs
code/rust/rest/client/: Cargo.toml
code/rust/rest/client/src/: main.rs
code/rust/rest/server/: Cargo.toml  Dockerfile
code/rust/rest/server/src/: handlers.rs  main.rs  models.rs  state.rs
code/shared/: ERROR_STANDARD.md  openapi.yaml
code/v/rest/: README.md  run-client.sh  run-server.sh
code/zig/rest/: README.md  run-client.sh  run-server.sh
test/: universal-test-suite.sh
(+210 files in other folders)
