[package]
name = "task-grpc-client"
version = "1.0.0"
edition = "2021"

[dependencies]
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "client"
path = "src/main.rs"